--- a/main.html
+++ b/main.html
@@ -7,6 +7,40 @@
 </head>
 
 <body>
+	
+	<table id="grocery-list">
+		<thead>
+			<tr>
+				<th>Item</th>
+				<th>Price</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Apples</td>
+				<td class="prices">1.99</td>
+			</tr>
+			<tr>
+				<td>Bananas</td>
+				<td class="prices">0.99</td>
+			</tr>
+			<tr>
+				<td>Oranges</td>
+				<td class="prices">2.49</td>
+			</tr>
+			<tr>
+				<td>Grapes</td>
+				<td class="prices">3.99</td>
+			</tr>
+			<tr>
+				<td>Total</td>
+				<td id="grandTotal"></td>
+			</tr>
+		</tbody>
+	</table>
+
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
