--- a/main.html
+++ b/main.html
@@ -8,36 +8,29 @@
 
 <body>
 	
-	<table id="grocery-list">
-		<thead>
-			<tr>
-				<th>Item</th>
-				<th>Price</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Apples</td>
-				<td class="prices">1.99</td>
-			</tr>
-			<tr>
-				<td>Bananas</td>
-				<td class="prices">0.99</td>
-			</tr>
-			<tr>
-				<td>Oranges</td>
-				<td class="prices">2.49</td>
-			</tr>
-			<tr>
-				<td>Grapes</td>
-				<td class="prices">3.99</td>
-			</tr>
-			<tr>
-				<td>Total</td>
-				<td id="grandTotal"></td>
-			</tr>
-		</tbody>
-	</table>
+	<table>  
+	  <tr>
+	  <td>1</td>
+	  <td>Item-2</td>
+	  <td data-ns-test="price">181</td>
+  </tr>
+	  <tr>
+	  <td>2</td>
+	  <td>Item-2</td>
+	  <td data-ns-test="price">183</td>
+  </tr>
+	  <tr>
+	  <td>3</td>
+	  <td>Item-3</td>
+	  <td data-ns-test="price">173</td>
+  </tr>
+  <tr>
+	  <td>4</td>
+	  <td>Item-4</td>
+	  <td data-ns-test="price">171</td>
+  </tr>
+  </table>
+
 
 
 
